--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,11 +8,19 @@ spring.jpa.properties.hibernate.format_sql=true
 
 
 # Producer properties
-spring.kafka.producer.bootstrap-servers=127.0.0.1:9092
+spring.kafka.producer.bootstrap-servers=localhost:9092
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
-spring.kafka.producer.group-id=group_id
+spring.kafka.producer.group-id=catalog
 topic.name.producer=topico.catalog
+
+# Consumer properties
+spring.kafka.consumer.bootstrap-servers=localhost:9092
+spring.kafka.consumer.group-id=catalog
+spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+topic.name.consumer=topico.catalog
 
 # Common Kafka Properties
 auto.create.topics.enable=true
